--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -9,18 +9,9 @@
   {% load static %}
   {% comment %}{% include "reload.html" %} {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
-  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 
   <style>
-    select {
-      max-width: 100%;
-      margin-right: 16px;
-    }
-  
-    ul,ol {
-      margin: 0px 0px 8px 0px;
-      padding: 0px 0px 0px 1.5em;
-    }
+    select {margin-right: 16px;}
 
     .agendamento {
       display: flex;
