--- a/users/templates/users/edita_nota.html
+++ b/users/templates/users/edita_nota.html
@@ -13,13 +13,11 @@
 
   <style>
     textarea {
-      max-width: 95%;
       margin: 0px 10px 6px 10px;
-      display: block;
+      {% comment %} display: block; {% endcomment %}
     }
     ul {
       list-style-type: none;
-      padding-left: 10px;
       margin-bottom: 2px;
       margin-top: 6px;
     }
