--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -14,14 +14,8 @@
 
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
   <link rel="stylesheet" href="{% static 'css/outros.css' %}">
-  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 
-  <style>
-    ul {
-      margin-bottom: 6px;
-      width: 100%;
-    }
-    
+  <style>    
     .lightgrey,
     .lightgrey:link,
     .lightgrey:visited,
@@ -101,10 +95,10 @@
                     <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
                       {{alocacao.aluno.user.get_full_name}}
                     </a>
-                    <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
-                    <span class="opt_short">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>                  
-                    <span class="opt_full emails"><a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a></span>
-                    <span class="opt_short emails"><a href="mailto:{{alocacao.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
+                    <span class="texto-longo">[{{ alocacao.aluno.curso2 }}]</span>
+                    <span class="texto-curto">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>                  
+                    <span class="texto-longo emails"><a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a></span>
+                    <span class="texto-curto emails"><a href="mailto:{{alocacao.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
                     {% if alocacao.aluno.externo %}<span style="color:red">[{{alocacao.aluno.externo}}]</span>{% endif %}
                   </li>
                 {% endfor %}
@@ -127,12 +121,12 @@
                     <b>{{item.composicao.exame.titulo}}</b>
                   {% endif %}      
                   {% if item.evento.endDate %}            
-                    <span class="opt_full">
+                    <span class="texto-longo">
                       <span lang="pt">[prazo </span>
                       <span lang="en">[deadline </span>
                       {{ item.evento.endDate|date:"DATE_FORMAT" }}]
                     </span>
-                    <span class="opt_short">
+                    <span class="texto-curto">
                       <span lang="pt">[prazo </span>
                       <span lang="en">[deadline </span>
                       {{ item.evento.endDate|date:"d/m/y" }}]
@@ -162,8 +156,8 @@
                             <span class="fas fa-archive"></span>
                             <span lang="pt">Entregue</span>
                             <span lang="en">Delivered</span>
-                            <span class="opt_full">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
-                            <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
+                            <span class="texto-longo">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
+                            <span class="texto-curto">{{ documento.data|date:"d/m/y H:i" }}</span>
                           </a>
                         {% endif %}
                         {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">
@@ -225,8 +219,8 @@
                              target="_blank" rel="noopener noreferrer">
                               <span class="fa fa-file"></span>
                               Entregue
-                              <span class="opt_full">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
-                              <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
+                              <span class="texto-longo">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
+                              <span class="texto-curto">{{ documento.data|date:"d/m/y H:i" }}</span>
                             </a>
                           {% endif %}
                           {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">
