--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -8,7 +8,6 @@
 {% block head %}
   {% load static %}
   {% load i18n %}
-  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -18,7 +17,7 @@
       <span lang="pt">Horário:</span>
       <span lang="en" style="display: none;">Time:</span>
     </b>
-    <span class="opt_full">
+    <span class="texto-longo">
       {{banca.startDate.date}}
       <span lang="pt">{% language "pt-br" %}
         ({{banca.startDate|date:"l"}})
@@ -30,7 +29,7 @@
       </span>
       {{banca.startDate.time}}
     </span>
-    <span class="opt_short">
+    <span class="texto-curto">
       {{ banca.startDate|date:"d/m/y" }}
       <span lang="pt">{% language "pt-br" %}
         ({{banca.startDate|date:"l"}})
@@ -130,8 +129,8 @@
         </b>
       {% endif %}
       {{banca.get_projeto.orientador.user.get_full_name}}
-      <span class="opt_full emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}">&lt;{{banca.get_projeto.orientador.user.email}}&gt;</a></span>
-      <span class="opt_short emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
+      <span class="texto-longo emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}">&lt;{{banca.get_projeto.orientador.user.email}}&gt;</a></span>
+      <span class="texto-curto emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
     <br>
   {% endif %}
   <br>
@@ -145,14 +144,14 @@
       <li>{{banca.get_projeto.orientador.user.get_full_name}} 
         <span lang="pt">[Orientador{% if banca.get_projeto.orientador.user.genero == 'F' %}a{% endif %}]</span>
         <span lang="en" style="display: none;">[Advisor]</span>
-        <span class="opt_full emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}">&lt;{{banca.get_projeto.orientador.user.email}}&gt;</a></span>
-        <span class="opt_short emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
+        <span class="texto-longo emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}">&lt;{{banca.get_projeto.orientador.user.email}}&gt;</a></span>
+        <span class="texto-curto emails"><a class="email" href="mailto:{{banca.get_projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
       </li>
     {% endif %}
     {% for membro in banca.membros %}        
       <li>{{membro.get_full_name}}
-        <span class="opt_full emails"><a class="email" href="mailto:{{membro.email}}">&lt;{{membro.email}}&gt;</a></span>
-        <span class="opt_short emails"><a class="email" href="mailto:{{membro.email}}"><i class="far fa-envelope"></i></a></span>
+        <span class="texto-longo emails"><a class="email" href="mailto:{{membro.email}}">&lt;{{membro.email}}&gt;</a></span>
+        <span class="texto-curto emails"><a class="email" href="mailto:{{membro.email}}"><i class="far fa-envelope"></i></a></span>
       </li>
     {% empty %}
       <b style="color: red;">
@@ -175,12 +174,12 @@
     <u>
     {% if banca.alocacao %}
       <a class="imprimir" href="{% url 'estudante_detail' banca.alocacao.aluno.id %}">{{banca.alocacao.aluno.user.get_full_name}}</a>  
-      <span class="opt_full curso unselectable">[{{ banca.alocacao.aluno.curso2 }}]</span>
-      <span class="opt_short curso unselectable">[{{ banca.alocacao.aluno.curso2.sigla_curta }}]</span>
-      <span class="opt_full emails"><a class="email" href="mailto:{{banca.alocacao.aluno.user.email}}">&lt;{{banca.alocacao.aluno.user.email}}&gt;</a></span>
-      <span class="opt_short emails"><a class="email" href="mailto:{{banca.alocacao.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
+      <span class="texto-longo curso unselectable">[{{ banca.alocacao.aluno.curso2 }}]</span>
+      <span class="texto-curto curso unselectable">[{{ banca.alocacao.aluno.curso2.sigla_curta }}]</span>
+      <span class="texto-longo emails"><a class="email" href="mailto:{{banca.alocacao.aluno.user.email}}">&lt;{{banca.alocacao.aluno.user.email}}&gt;</a></span>
+      <span class="texto-curto emails"><a class="email" href="mailto:{{banca.alocacao.aluno.user.email}}"><i class="far fa-envelope"></i></a></span>
     {% else %}
-      <span class="opt_full">Estudante não alocado</span>
+      <span class="texto-longo">Estudante não alocado</span>
     {% endif %}
     </u>
     <br><br>
