--- a/professores/templates/professores/objetivo_editar.html
+++ b/professores/templates/professores/objetivo_editar.html
@@ -27,7 +27,7 @@
       <label for="titulo">
         <span lang="pt">Título:</span>
         <span lang="en">Title:</span>
-        <input id="titulo" name="titulo" type="text" size="75" maxlength="128" style="max-width: 100%;"
+        <input id="titulo" name="titulo" type="text" size="75" maxlength="128"
         {% if objetivo %}
           value="{{objetivo.titulo}}"
         {% endif %} 
@@ -39,7 +39,7 @@
         <span lang="pt">Descrição:</span>
         <span lang="en">Description:</span>
         <br>
-        <textarea id="descricao" name="descricao" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.objetivo}}{% endif %} </textarea>
+        <textarea id="descricao" name="descricao" rows="4" cols="80">{% if objetivo %}{{objetivo.objetivo}}{% endif %} </textarea>
       </label>
       <br>
 
@@ -217,55 +217,55 @@
         <br>
       
       <label for="rubrica_intermediaria_I">Rubrica intermediária I:<br>
-        <textarea id="rubrica_intermediaria_I" name="rubrica_intermediaria_I" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_intermediaria_I}}{% endif %} </textarea>
+        <textarea id="rubrica_intermediaria_I" name="rubrica_intermediaria_I" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_intermediaria_I}}{% endif %} </textarea>
       </label>
       <br>
 
       <label for="rubrica_final_I">Rubrica Final I:<br>
-        <textarea id="rubrica_final_I" name="rubrica_final_I" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_final_I}}{% endif %} </textarea>
+        <textarea id="rubrica_final_I" name="rubrica_final_I" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_final_I}}{% endif %} </textarea>
       </label>
       <br><br>
 
 
       <label for="rubrica_intermediaria_D">Rubrica intermediária D:<br>
-        <textarea id="rubrica_intermediaria_D" name="rubrica_intermediaria_D" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_intermediaria_D}}{% endif %} </textarea>
+        <textarea id="rubrica_intermediaria_D" name="rubrica_intermediaria_D" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_intermediaria_D}}{% endif %} </textarea>
       </label>
       <br>
 
       <label for="rubrica_final_D">Rubrica Final D:<br>
-        <textarea id="rubrica_final_D" name="rubrica_final_D" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_final_D}}{% endif %} </textarea>
+        <textarea id="rubrica_final_D" name="rubrica_final_D" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_final_D}}{% endif %} </textarea>
       </label>
       <br><br>
 
 
       <label for="rubrica_intermediaria_C">Rubrica intermediária C:<br>
-        <textarea id="rubrica_intermediaria_C" name="rubrica_intermediaria_C" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_intermediaria_C}}{% endif %} </textarea>
+        <textarea id="rubrica_intermediaria_C" name="rubrica_intermediaria_C" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_intermediaria_C}}{% endif %} </textarea>
       </label>
       <br>
 
       <label for="rubrica_final_C">Rubrica Final C:<br>
-        <textarea id="rubrica_final_C" name="rubrica_final_C" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_final_C}}{% endif %} </textarea>
+        <textarea id="rubrica_final_C" name="rubrica_final_C" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_final_C}}{% endif %} </textarea>
       </label>
       <br><br>
 
 
       <label for="rubrica_intermediaria_B">Rubrica intermediária B:<br>
-        <textarea id="rubrica_intermediaria_B" name="rubrica_intermediaria_B" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_intermediaria_B}}{% endif %} </textarea>
+        <textarea id="rubrica_intermediaria_B" name="rubrica_intermediaria_B" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_intermediaria_B}}{% endif %} </textarea>
       </label>
       <br>
 
       <label for="rubrica_final_B">Rubrica Final B:<br>
-        <textarea id="rubrica_final_B" name="rubrica_final_B" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_final_B}}{% endif %} </textarea>
+        <textarea id="rubrica_final_B" name="rubrica_final_B" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_final_B}}{% endif %} </textarea>
       </label>
       <br><br>
 
       <label for="rubrica_intermediaria_A">Rubrica intermediária A:<br>
-        <textarea id="rubrica_intermediaria_A" name="rubrica_intermediaria_A" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_intermediaria_A}}{% endif %} </textarea>
+        <textarea id="rubrica_intermediaria_A" name="rubrica_intermediaria_A" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_intermediaria_A}}{% endif %} </textarea>
       </label>
       <br>
 
       <label for="rubrica_final_A">Rubrica Final A:<br>
-        <textarea id="rubrica_final_A" name="rubrica_final_A" rows="4" cols="80" style="max-width: 100%;">{% if objetivo %}{{objetivo.rubrica_final_A}}{% endif %} </textarea>
+        <textarea id="rubrica_final_A" name="rubrica_final_A" rows="4" cols="80">{% if objetivo %}{{objetivo.rubrica_final_A}}{% endif %} </textarea>
       </label>
       
 
