--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -11,14 +11,12 @@
   {% load get_field %}
   {% comment %} {% load banca_tipo %} {% endcomment %}
 
-  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
   <script src="{% static 'js/aviso_perda_edicao.js' %}"></script>
   <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
 
   <style>
     textarea {
-      max-width:100%;
       display: block;
       padding: 6px;
     }
@@ -91,7 +89,7 @@
         <br>
         <textarea id="relato" name="relato" rows="10" cols="160" disabled>{{relato.texto}}</textarea>
 
-        <div style="width: 98%; max-width: 100%; display: block; margin-left: 8px; margin-right: 8px; " {% if not relato %}data-toggle="tooltip" data-html="true" animation="true" title="Estudante não entregou relato"{% endif %}>
+        <div style="width: 98%; display: block; margin-left: 8px; margin-right: 8px; " {% if not relato %}data-toggle="tooltip" data-html="true" animation="true" title="Estudante não entregou relato"{% endif %}>
           <label>
             <span lang="pt">Desempenho</span>
             <span lang="en">Performance</span>
@@ -113,7 +111,7 @@
             </label>
           </div>
           {% if relato %}
-          <div style="width: 100%; max-width: 100%; display: inline; margin-left: 8px;">
+          <div style="width: 100%; display: inline; margin-left: 8px;">
             <label class="feedbacks" for="customFeedback{{relato.id}}">
               Feedback (<pre lang="pt">opcional</pre><pre lang="en">optional</pre>)
               {% if relato.feedback %}<span class="seta-baixo">{% else %}<span class="seta-cima">{% endif %}</span></label>
