--- a/templates/calendario_dinamicas.html
+++ b/templates/calendario_dinamicas.html
@@ -33,7 +33,7 @@
   <span lang="pt">Legendas</span>
   <span lang="en">Captions</span>
 </h4>
-<div class="wrap table-responsive" style="max-width: 100%;">  
+<div class="wrap table-responsive">  
   <div class="legenda" style="display: flex;">
     <div class="legenda-block">
       <div id="leg_horario" class="legenda-item">
