--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -4,15 +4,6 @@
   Data: 13 de Junho de 2023
 {% endcomment %}
 
-<style>
-  .opt_short {display: none;}
-  .opt_full {display: inline;}
-  @media screen and (max-width: 800px) {
-    .opt_short {display: inline;}
-    .opt_full {display: none;}
-  }
-</style>
-
 {% if documentos %}
   {% for documento in documentos %}
     <div style="display: flex; align-items: flex-start;">
@@ -53,8 +44,8 @@
 
       <div style="white-space: nowrap;">
         {% if documento.data %}
-          <span class="opt_full">: {{ documento.data|date:"DATE_FORMAT" }}</span>
-          <span class="opt_short">: {{ documento.data|date:"d/m/Y" }}</span>
+          <span class="texto-longo">: {{ documento.data|date:"DATE_FORMAT" }}</span>
+          <span class="texto-curto">: {{ documento.data|date:"d/m/Y" }}</span>
         {% endif %}
         {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
           <sup>(Inglês)</sup>
